--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/IISManager/local.db-wal
+/IISManager/local.db-shm
+/IISManager/local.db
